# FastMCP

./: .replit  absolute_path_server.py  app.py  automated_email_processor.py  automated_email_processor_mcp.py  automated_email_processor_mcp_fixed.py  email_enhanced_server.py  http_mcp_server.py  mcp_config.yaml  n8n_workflows.json  pyproject.toml  replit.md  server.py  standalone_server.py  test_email.py  test_email_simple.py
.local/state/replit/agent/: .latest.json
attached_assets/: Pasted-MCP-server-built-in-Python-using-the-official-MCP-Python-SDK-FastMCP-Exposes-the-following-Res-1756179965431_1756179965433.txt
data/: sales.csv  sample_data.csv  trends.csv  users.csv
scripts/: bar_chart.py  custom_stats.py  email_utils.py  line_graph.py  pie_chart.py  sample_analysis.py  simple_stats.py
static/: dashboard.js  style.css
templates/: dashboard.html  upload.html
utils/: auth.py  logger.py  ollama_client.py
